# Todo

./: README.md  crud_tasks.py  endpoint.py  pyproject.toml  session_def.py
.github/workflows/: pylint.yml
models/: model_and_session.py
sqlmodel_init/: database_and_session.py
