[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["hayashitomoharu <146327155+hayashitomoharu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.23.2"
pytz = "^2023.3.post1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
pyright = "^1.1.332"
ruff = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
